--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="price">Preço</string>
     <string name="autonomy">Autonomia</string>
     <string name="calculate">Calcular</string>
+    <string name="valores_validos">Por favor, informe valores válidos!</string>
 </resources>
