From compile to implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="autonomy">Autonomia</string>
     <string name="calculate">Calcular</string>
     <string name="valores_validos">Por favor, informe valores válidos!</string>
+    <string name="total_km">Total de Quilômetros</string>
 </resources>
